k8s/yolo5_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo5
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-172-31-4-83.us-west-1.compute.internal
      containers:
      - name: yolo5
        image: 352708296901.dkr.ecr.us-west-1.amazonaws.com/jihadyolo5:1.5
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "150Mi"
          limits:
            cpu: "5000m"
            memory: "5Gi"
