k8s/polybot_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
      - name: polybot
        image: 352708296901.dkr.ecr.us-west-1.amazonaws.com/jihadpolybot:1.4
        ports:
        - containerPort: 8443
        readinessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8443
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            cpu: "100m"
            memory: "150Mi"
          limits:
            cpu: "200m"
            memory: "300Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
