k8s/telegram-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telegram-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "app.kubernetes.io/managed-by=nginx-ingress-controller"
spec:
  tls:
    - hosts:
        - polybotjihad.devops-int-college.com
      secretName: tls-secret
  rules:
    - host: polybotjihad.devops-int-college.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8443
